--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <title>OOS动效平台</title>
   </head>
   <body  >
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>抱歉，你的浏览器不支持,换个Chrome浏览器试试</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
