--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
     <!-- 禁止双击缩放 -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--     <meta name="viewport" content="viewport-fit=cover" /> -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
