--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--     <meta name="viewport" content="viewport-fit=cover" /> -->
-    <meta name="viewport" content="viewport-fit=cover" />
+    <!--  <meta name="viewport" content="viewport-fit=cover" /> -->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
