--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>OOS动效平台</title>
+    <title>李佳奇面试demo</title>
   </head>
   <body>
-    <noscript>欢迎来到OOS动效平台</noscript>
+    <noscript>李佳奇面试demo</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
